plugins {
    id 'java'
    id 'application'
    id "com.github.johnrengelman.shadow" version "6.1.0"
    id 'info.solidsoft.pitest' version '1.5.2'
    id 'se.patrikerdes.use-latest-versions' version '0.2.15'
    id 'com.github.ben-manes.versions' version '0.35.0'
}


apply plugin: 'java'
apply plugin: 'idea'

mainClassName = "core.Chuu"

group 'ish'
version '1.0'
apply plugin: 'java'

sourceCompatibility = 11
targetCompatibility = 11

repositories {
    mavenCentral()
    jcenter()
    maven { url 'https://dl.bintray.com/natanbc/maven' }

}


compileJava {
    options.compilerArgs += ["-Xlint:deprecation"]
}
//test {
//    jvmArgs '--enable-preview'
//}
compileJava.options.encoding = 'UTF-8'
compileTestJava.options.encoding = 'UTF-8'


dependencies {
// https://mvnrepository.com/artifact/org.knowm.xchart/xchart
    implementation project(':model')
    implementation group: 'org.knowm.xchart', name: 'xchart', version: '3.6.5'
    implementation 'se.michaelthelin.spotify:spotify-web-api-java:6.4.1'

// https://mvnrepository.com/artifact/com.mchange/c3p0
// https://mvnrepository.com/artifact/se.michaelthelin.spotify/spotify-web-api-java
    implementation 'ch.qos.logback:logback-classic:1.3.0-alpha5'
// https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12
// https://mvnrepository.com/artifact/org.slf4j/slf4j-jdk14

    implementation 'com.neovisionaries:nv-i18n:1.27'

    testImplementation group: 'junit', name: 'junit', version: '4.13.1'

    implementation('net.dv8tion:JDA:4.2.0_214') {
        exclude module: 'opus-java'
    }

// https://mvnrepository.com/artifact/org.apache.commons/commons-collections4
    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'


// https://mvnrepository.com/artifact/c3p0/c3p0
// https://mvnrepository.com/artifact/com.github.jengelman.gradle.plugins/shadow

    implementation group: 'org.json', name: 'json', version: '20200518'

    //For Youtube search api
    implementation 'com.google.api-client:google-api-client:1.30.11'
    implementation 'com.google.apis:google-api-services-youtube:v3-rev20200618-1.30.9'
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.31.2'
    implementation 'org.beryx:awt-color-factory:1.0.2'

// https://mvnrepository.com/artifact/com.twelvemonkeys.imageio/imageio-jpeg
    implementation group: 'com.twelvemonkeys.imageio', name: 'imageio-core', version: '3.6'
    implementation group: 'com.twelvemonkeys.imageio', name: 'imageio-jpeg', version: '3.6'

    //Rescaler
    implementation group: 'org.imgscalr', name: 'imgscalr-lib', version: '4.2'

    implementation group: 'org.apache.xmlgraphics', name: 'batik-transcoder', version: '1.13'
    implementation group: 'org.apache.xmlgraphics', name: 'batik-codec', version: '1.13'
// https://mvnrepository.com/artifact/org.apache.xmlgraphics/batik-svggen
    implementation group: 'org.apache.xmlgraphics', name: 'batik-svggen', version: '1.13'
// https://mvnrepository.com/artifact/com.zaxxer/HikariCP
    implementation group: 'com.zaxxer', name: 'HikariCP', version: '3.4.5'
// https://mvnrepository.com/artifact/org.awaitility/awaitility
    testImplementation group: 'org.awaitility', name: 'awaitility', version: '4.0.3'
    testImplementation group: 'com.openpojo', name: 'openpojo', version: '0.8.13'
// https://mvnrepository.com/artifact/org.ow2.asm/asm
    testImplementation group: 'org.ow2.asm', name: 'asm', version: '9.0'

// https://mvnrepository.com/artifact/org.graphwalker/graphwalker-core
    testImplementation group: 'org.graphwalker', name: 'graphwalker-core', version: '4.3.0'
// https://mvnrepository.com/artifact/org.graphwalker/graphwalker-java
    // group: 'org.graphwalker', name: 'graphwalker-java', version: '4.1.0'

// https://mvnrepository.com/artifact/com.pholser/junit-quickcheck-core
    //a
    testImplementation group: 'com.pholser', name: 'junit-quickcheck-core', version: '0.9.5'
    testImplementation "org.mockito:mockito-core:3.6.0"
    implementation 'com.github.natanbc:java-eval:1.0'


}
